--- a/pom.xml
+++ b/pom.xml
@@ -93,11 +93,11 @@ limitations under the License.
 		
 		<!-- BEGIN: bundled dependencies-->
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.6.0</version>
-			<scope>compile</scope>
+		   <groupId>org.hibernate</groupId>
+		   <artifactId>hibernate-entitymanager</artifactId>
+		   <version>4.3.10.Final</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>logger</artifactId>
