--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@ limitations under the License.
 			<version>1.4.187</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>org.eclipse.persistence.jpa</artifactId>
+			<version>2.6.0</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- END: test dependencies -->
 		
 		<!-- BEGIN: provided dependencies -->
@@ -91,13 +97,7 @@ limitations under the License.
 		</dependency>
 		<!-- END: provided dependencies -->
 		
-		<!-- BEGIN: bundled dependencies-->
-		<dependency>
-		   <groupId>org.hibernate</groupId>
-		   <artifactId>hibernate-entitymanager</artifactId>
-		   <version>4.3.10.Final</version>
-		</dependency>
-		
+		<!-- BEGIN: bundled dependencies-->		
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>logger</artifactId>
