--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@ limitations under the License.
 			<version>0.1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>com.agapsys.libs</groupId>
+			<artifactId>console-utils</artifactId>
+			<version>0.1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
