--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
 	
 	<groupId>com.agapsys.libs</groupId>
 	<artifactId>web-core</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0-RC1</version>
 	<packaging>jar</packaging>
 	
 	<properties>
@@ -61,11 +61,11 @@ limitations under the License.
 	</organization>
 	
 	<dependencies>
-		<!-- BEGIN: test dependencies -->
+		<!-- Test dependencies -->
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>servlet-testing-framework</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
+			<version>1.0.0-RC1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -81,23 +81,21 @@ limitations under the License.
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>2.6.0</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.0.1.Final</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- END: test dependencies -->
 		
-		<!-- BEGIN: provided dependencies -->
+		<!-- Provided dependencies -->
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-web-api</artifactId>
 			<version>7.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<!-- END: provided dependencies -->
 		
-		<!-- BEGIN: bundled dependencies-->		
+		<!-- Compile dependencies-->		
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>smtp-sender</artifactId>
@@ -113,6 +111,5 @@ limitations under the License.
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-		<!-- END: bundled dependencies -->
 	</dependencies>
 </project>
