--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>logger</artifactId>
-			<version>2.0.0-RC2</version>
+			<version>3.0.0-RC1-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
