--- a/pom.xml
+++ b/pom.xml
@@ -99,7 +99,7 @@ limitations under the License.
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>smtp-sender</artifactId>
-			<version>1.0.0</version>
+			<version>2.0.0-RC1-SNAPHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
