--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
 	
 	<groupId>com.agapsys.libs</groupId>
 	<artifactId>web-toolkit</artifactId>
-	<version>0.1.0-RC1-SNAPSHOT</version>
+	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
 	<properties>
