Project was renamed

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
 	<modelVersion>4.0.0</modelVersion>
 	
 	<groupId>com.agapsys.libs</groupId>
-	<artifactId>web-toolkit</artifactId>
+	<artifactId>web-app-toolkit</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	
@@ -30,7 +30,7 @@ limitations under the License.
 		<maven.compiler.target>1.7</maven.compiler.target>
 	</properties>
 	
-	<name>Web Toolkit</name>
+	<name>Web Application Toolkit</name>
 	<description>Essential tools for back-end applications</description>
 	<url>https://github.com/agapsys/web-toolkit</url>
 	
@@ -51,8 +51,8 @@ limitations under the License.
 	</developers>
 	
 	<scm>
-		<connection>scm:git:git@github.com:agapsys/web-toolkit.git</connection>
-		<url>git@github.com:agapsys/web-toolkit.git</url>
+		<connection>scm:git:git@github.com:agapsys/web-app-toolkit.git</connection>
+		<url>git@github.com:agapsys/web-app-toolkit.git</url>
 	</scm>
 	
 	<organization>
