Changed project URL

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ limitations under the License.
 	
 	<name>Web Application Toolkit</name>
 	<description>Essential tools for back-end applications</description>
-	<url>https://github.com/agapsys/web-toolkit</url>
+	<url>https://github.com/agapsys/web-app-toolkit</url>
 	
 	<licenses>
 		<license>
