--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
 	
 	<groupId>com.agapsys.libs</groupId>
 	<artifactId>web-app-toolkit</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>jar</packaging>
 	
 	<properties>
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>embedded-servlet-container</artifactId>
-			<version>0.1.0-SNAPSHOT</version>
+			<version>0.1.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -99,7 +99,7 @@ limitations under the License.
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>smtp-sender</artifactId>
-			<version>2.0.0-SNAPSHOT</version>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 </project>
