Updated version and dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
 	
 	<groupId>com.agapsys.libs</groupId>
 	<artifactId>web-app-toolkit</artifactId>
-	<version>0.1.0</version>
+	<version>0.2.0</version>
 	<packaging>jar</packaging>
 	
 	<properties>
@@ -65,7 +65,7 @@ limitations under the License.
 		<dependency>
 			<groupId>com.agapsys.libs</groupId>
 			<artifactId>embedded-servlet-container</artifactId>
-			<version>0.1.0</version>
+			<version>[0.1.0, 1.0.0)</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
