--- a/pom.xml
+++ b/pom.xml
@@ -101,5 +101,10 @@ limitations under the License.
             <artifactId>smtp-sender</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+		<dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.2</version>
+        </dependency>
     </dependencies>
 </project>
