--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.agapsys</groupId>
-    <artifactId>web-app-toolkit</artifactId>
+    <artifactId>web-app-toolkit-core</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
@@ -30,7 +30,7 @@ limitations under the License.
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
 
-    <name>Web Application Toolkit</name>
+    <name>Web Application Toolkit (Core Library)</name>
     <description>Essential tools for back-end applications</description>
     <url>https://github.com/agapsys/web-app-toolkit</url>
 
