--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
 
     <groupId>com.agapsys</groupId>
     <artifactId>web-app-toolkit-core</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>jar</packaging>
 
     <properties>
@@ -65,7 +65,7 @@ limitations under the License.
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>embedded-servlet-container</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -99,7 +99,7 @@ limitations under the License.
         <dependency>
             <groupId>com.agapsys</groupId>
             <artifactId>smtp-sender</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>0.1.0</version>
         </dependency>
 		<dependency>
             <groupId>commons-fileupload</groupId>
